Fix twitter link on mobile (#6)

--- a/packages/bedtime/src/components/card/Card.module.css
+++ b/packages/bedtime/src/components/card/Card.module.css
@@ -13,4 +13,5 @@
     border-bottom-left-radius: 12px;
     border-bottom-right-radius: 12px;
     overflow: hidden;
+    z-index: 2;
 }
